--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -1,11 +1,9 @@
 <div class="ngx-tabs">
   <mat-card class="ngx-tabs__card">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <div mat-card-avatar class="ngx-tabs__card-avatar"></div>
+      <mat-card-title>Browse Website</mat-card-title>
     </mat-card-header>
-    <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
     <mat-card-content>
       <mat-tab-group>
         <mat-tab label="Tab 1">Content 1</mat-tab>
