--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -1,8 +1,12 @@
 <div class="ngx-tabs">
   <mat-card class="ngx-tabs__card">
     <mat-card-header>
-      <div mat-card-avatar class="ngx-tabs__card-avatar"></div>
-      <mat-card-title>Browse Website</mat-card-title>
+      <div class="ngx-tabs__card-avatar"
+           mat-card-avatar>
+      </div>
+      <mat-card-title class="ngx-tabs__card-title">
+        Browse Website
+      </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-tab-group>
