--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -10,8 +10,7 @@
     </mat-card-header>
     <mat-card-content>
       <mat-tab-group>
-        <mat-tab label="Tab 1">Content 1</mat-tab>
-        <mat-tab label="Tab 2">Content 2</mat-tab>
+        <mat-tab *ngFor="let tab of tabs; let i = index" label="{{tab.name}}">Content 1</mat-tab>
       </mat-tab-group>
     </mat-card-content>
     <mat-card-actions>
