--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -9,7 +9,7 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <mat-tab-group>
+      <mat-tab-group [selectedIndex]="defaultTab">
         <mat-tab *ngFor="let tab of tabs; let i = index" label="{{tab.name}}">Content 1</mat-tab>
       </mat-tab-group>
     </mat-card-content>
