--- a/src/tabs/tabs.component.scss
+++ b/src/tabs/tabs.component.scss
@@ -2,10 +2,16 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+
+    font-size:16px;
 }
 
 .ngx-tabs__card {
     flex: 0 50%;
+
+    @media screen and (max-width: 599px) {
+        flex-basis: 100%;
+    }
 }
 
 .ngx-tabs__card-avatar {
@@ -16,6 +22,6 @@
 
 .ngx-tabs__card-title {
     margin: 4px 0 0;
-    font-size: 22px;
+    font-size: 1.375em;
     font-weight: 400;
 }
