--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -1,6 +1,6 @@
 <div class="ngx-tabs">
   <mat-card class="ngx-tabs__card">
-    <mat-card-header>
+    <mat-card-header class="ngx-tabs__card-header">
       <div class="ngx-tabs__card-avatar"
            mat-card-avatar>
       </div>
@@ -9,9 +9,22 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <mat-tab-group [selectedIndex]="defaultTab">
-        <mat-tab *ngFor="let tab of tabs; let i = index" label="{{tab.name}}">Content 1</mat-tab>
+      <mat-tab-group [selectedIndex]="defaultTab" (selectedTabChange)="onSelect($event)">
+        <mat-tab *ngFor="let tab of tabs; let i = index" >
+            <ng-template mat-tab-label>
+              <mat-icon>{{tab.icon}}</mat-icon> <span> {{tab.name}}</span>
+            </ng-template>
+        </mat-tab>
       </mat-tab-group>
+      <div *ngIf="defaultTab === 0">
+        Topics
+      </div>
+      <div *ngIf="defaultTab === 1">
+        ARCHIVES
+      </div>
+      <div *ngIf="defaultTab === 2">
+        pages
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
