--- a/src/tabs/tabs.component.scss
+++ b/src/tabs/tabs.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-
+    height: 100%;
     font-size:16px;
 }
 
@@ -20,8 +20,13 @@
     width: 35px;
 }
 
+.ngx-tabs__card-header {
+    margin-bottom: 12px;
+}
+
 .ngx-tabs__card-title {
     margin: 4px 0 0;
     font-size: 1.375em;
     font-weight: 400;
+    color: #102379;
 }
