get tabs content from service

--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -17,7 +17,9 @@
         </mat-tab>
       </mat-tab-group>
       <div *ngIf="defaultTab === 0">
-        
+        <div *ngFor="let content of tabsContent[defaultTab].content; let i = index">
+            {{content.title}} - {{content.posts}}
+        </div>
       </div>
       <div *ngIf="defaultTab === 1">
         ARCHIVES
