--- a/src/tabs/tabs.component.scss
+++ b/src/tabs/tabs.component.scss
@@ -40,3 +40,17 @@
         text-decoration: underline;
     }
 }
+
+.ngx-tabs__pages-square {
+    background: lightblue;
+}
+
+.ngx-tabs__pages {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.ngx-tabs__spinner-pages {
+    margin-top: 25px;
+}
